--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,16 +1,42 @@
 asgiref==3.2.5
+beautifulsoup4==4.8.2
+bs4==0.0.1
+CacheControl==0.12.6
+cachetools==4.0.0
 certifi==2019.11.28
 chardet==3.0.4
 dj-database-url==0.5.0
 Django==3.0.4
 django-heroku==0.3.1
+firebase-admin==4.0.0
+google-api-core==1.16.0
+google-api-python-client==1.8.0
+google-auth==1.11.3
+google-auth-httplib2==0.0.3
+google-cloud-core==1.3.0
+google-cloud-firestore==1.6.2
+google-cloud-storage==1.26.0
+google-resumable-media==0.5.0
+googleapis-common-protos==1.51.0
+grpcio==1.27.2
 gunicorn==20.0.4
 heroku==0.1.4
+html5lib==1.0.1
+httplib2==0.17.0
 idna==2.9
+msgpack==1.0.0
+protobuf==3.11.3
 psycopg2==2.8.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 python-dateutil==1.5
 pytz==2019.3
 requests==2.23.0
+rsa==4.0
+six==1.14.0
+soupsieve==2.0
 sqlparse==0.3.1
+uritemplate==3.0.1
 urllib3==1.25.8
+webencodings==0.5.1
 whitenoise==5.0.1
